// PESO Connect ERD — matches implemented Laravel schema

Table admins {
  id int [pk, increment]
  username varchar [unique]
  password varchar
  created_at timestamp
  updated_at timestamp
}

Table employers {
  id int [pk, increment]
  name varchar [unique]
  abbr varchar
  peso_verified boolean
  contact_person varchar
  contact_email varchar
  address text
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table job_postings {
  id int [pk, increment]
  admin_id int [ref: > admins.id]
  employer_id int [ref: > employers.id, null]
  job_title varchar
  company varchar
  location varchar
  min_salary int
  max_salary int
  job_type varchar
  job_description text
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table applicants {
  id int [pk, increment]
  admin_id int [ref: > admins.id, null]
  job_posting_id int [ref: > job_postings.id, null]
  email_address varchar
  fullname varchar
  contact_number varchar
  date_of_birth date
  gender varchar
  civil_status varchar
  address text
  education varchar
  skills text
  position varchar
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table referrals {
  id int [pk, increment]
  applicant_id int [ref: > applicants.id, null]
  job_posting_id int [ref: > job_postings.id, null]
  admin_id int [ref: > admins.id, null]
  employer_id int [ref: > employers.id, null]
  fullname varchar
  job_title varchar
  employer varchar
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table certifications {
  id int [pk, increment]
  applicant_id int [ref: > applicants.id, null]
  admin_id int [ref: > admins.id, null]
  fullname varchar
  barangay varchar
  id_type varchar
  id_document_path varchar
  date_requested date
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table announcements {
  id int [pk, increment]
  admin_id int [ref: > admins.id, null]
  slug varchar [unique]
  title varchar
  description text
  category varchar
  status varchar
  publish_date date
  scheduled_date date
  scheduled_time time
  author_name varchar
  created_at timestamp
  updated_at timestamp
}

Table activity_logs {
  id int [pk, increment]
  admin_id int [ref: > admins.id, null]
  action varchar
  details text
  created_at timestamp
  updated_at timestamp
}
